--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* styles globales */
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    background-color: #0E0E0E;
+}
