--- a/src/output.css
+++ b/src/output.css
@@ -566,6 +566,10 @@ video {
   top: 0px;
 }
 
+.z-20 {
+  z-index: 20;
+}
+
 .z-50 {
   z-index: 50;
 }
@@ -578,12 +582,26 @@ video {
   display: none;
 }
 
+.h-max {
+  height: -moz-max-content;
+  height: max-content;
+}
+
 .h-screen {
   height: 100vh;
 }
 
+.h-full {
+  height: 100%;
+}
+
 .w-full {
   width: 100%;
+}
+
+.w-max {
+  width: -moz-max-content;
+  width: max-content;
 }
 
 .w-screen {
@@ -610,6 +628,10 @@ video {
   justify-content: space-between;
 }
 
+.gap-10 {
+  gap: 2.5rem;
+}
+
 .gap-3 {
   gap: 0.75rem;
 }
@@ -620,6 +642,10 @@ video {
 
 .gap-7 {
   gap: 1.75rem;
+}
+
+.gap-8 {
+  gap: 2rem;
 }
 
 .overflow-hidden {
@@ -680,24 +706,8 @@ video {
   text-align: center;
 }
 
-.leading-9 {
-  line-height: 2.25rem;
-}
-
-.leading-relaxed {
-  line-height: 1.625;
-}
-
-.leading-snug {
-  line-height: 1.375;
-}
-
 .leading-tight {
   line-height: 1.25;
-}
-
-.leading-none {
-  line-height: 1;
 }
 
 .text-white {
@@ -775,6 +785,10 @@ body {
   font-family: "lato-regular";
 }
 
+.nav {
+  background-color: #0e0e0e54;
+}
+
 .nav .nav__container {
   border-bottom: 1px solid var(--gray01);
 }
@@ -797,7 +811,16 @@ body {
 
 .hero .header p {
   color: var(--gray02);
-  width: 530px;
+  width: 510px;
+}
+
+.hero .footer-buttons :first-child {
+  background-color: var(--blue01);
+}
+
+.hero .footer-buttons :last-child {
+  border: 1px solid #222;
+  background: linear-gradient(92deg, #131212 1.08%, rgba(22, 22, 22, 0.88) 46.58%, rgba(29, 28, 28, 0.78) 67.12%, rgba(25, 25, 25, 0.90) 98.92%);
 }
 
 @media (min-width: 768px) {
