--- a/src/output.css
+++ b/src/output.css
@@ -562,16 +562,8 @@ video {
   z-index: 50;
 }
 
-.ml-5 {
-  margin-left: 1.25rem;
-}
-
 .ml-2 {
   margin-left: 0.5rem;
-}
-
-.mr-4 {
-  margin-right: 1rem;
 }
 
 .mr-2 {
@@ -586,8 +578,16 @@ video {
   display: none;
 }
 
-.h-screen {
-  height: 100vh;
+.h-full {
+  height: 100%;
+}
+
+.w-11\/12 {
+  width: 91.666667%;
+}
+
+.w-2\/5 {
+  width: 40%;
 }
 
 .w-3\/5 {
@@ -611,6 +611,10 @@ video {
   flex-direction: column;
 }
 
+.items-start {
+  align-items: flex-start;
+}
+
 .items-center {
   align-items: center;
 }
@@ -623,8 +627,16 @@ video {
   justify-content: space-between;
 }
 
+.gap-1 {
+  gap: 0.25rem;
+}
+
 .gap-10 {
   gap: 2.5rem;
+}
+
+.gap-20 {
+  gap: 5rem;
 }
 
 .gap-3 {
@@ -643,12 +655,8 @@ video {
   gap: 2rem;
 }
 
-.gap-2 {
-  gap: 0.5rem;
-}
-
-.gap-1 {
-  gap: 0.25rem;
+.gap-24 {
+  gap: 6rem;
 }
 
 .overflow-hidden {
@@ -663,6 +671,10 @@ video {
   background-image: url('/public/hero-bg.png');
 }
 
+.bg-\[url\(\'\/public\/star\.png\'\)\] {
+  background-image: url('/public/star.png');
+}
+
 .bg-cover {
   background-size: cover;
 }
@@ -675,9 +687,19 @@ video {
   background-repeat: no-repeat;
 }
 
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
+}
+
+.px-20 {
+  padding-left: 5rem;
+  padding-right: 5rem;
 }
 
 .px-4 {
@@ -700,6 +722,11 @@ video {
   padding-bottom: 0.75rem;
 }
 
+.py-40 {
+  padding-top: 10rem;
+  padding-bottom: 10rem;
+}
+
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
@@ -707,6 +734,16 @@ video {
 
 .text-center {
   text-align: center;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .leading-tight {
@@ -723,7 +760,7 @@ video {
 :root {
   --blue01: #1770F6;
   --gray01: rgba(34, 35, 36, 0.70);
-  --gray02: rgba(255, 255, 255, 0.50);
+  --gray02: #ffffff75;
 }
 
 /* styles globales */
@@ -818,7 +855,7 @@ body {
 }
 
 .hero .footer-buttons :last-child {
-  border: 1px solid var(--gray01);
+  border: 1px solid var(--gray02);
   background: linear-gradient(92deg, #131212 1.08%, rgba(22, 22, 22, 0.88) 46.58%, rgba(29, 28, 28, 0.78) 67.12%, rgba(25, 25, 25, 0.90) 98.92%);
 }
 
@@ -835,6 +872,22 @@ body {
 .tag p {
   width: -moz-max-content !important;
   width: max-content !important;
+  color: var(--gray02);
+}
+
+.about .about-content .header span {
+  background: linear-gradient(92deg, #1770F6 68.89%, #9243FA 94.31%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.about .about-content .content p {
+  color: var(--gray02);
+}
+
+.about .about-content  button {
+  background-color: var(--blue01);
 }
 
 @media (min-width: 768px) {
