fix features-card col

--- a/src/styles.css
+++ b/src/styles.css
@@ -140,3 +140,12 @@ body {
 .features .header button {
     background-color: var(--blue01);
 }
+
+
+.features .content p{
+    color: var(--gray02);
+}
+
+.features .content .container .card:nth-child(1){
+    height: 380px;
+}
