--- a/src/output.css
+++ b/src/output.css
@@ -600,9 +600,12 @@ video {
   grid-column: span 2 / span 2;
 }
 
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
+.col-span-3 {
+  grid-column: span 3 / span 3;
+}
+
+.col-span-5 {
+  grid-column: span 5 / span 5;
 }
 
 .ml-2 {
@@ -625,6 +628,10 @@ video {
   display: none;
 }
 
+.h-80 {
+  height: 20rem;
+}
+
 .h-full {
   height: 100%;
 }
@@ -632,18 +639,6 @@ video {
 .h-max {
   height: -moz-max-content;
   height: max-content;
-}
-
-.h-96 {
-  height: 24rem;
-}
-
-.h-72 {
-  height: 18rem;
-}
-
-.h-80 {
-  height: 20rem;
 }
 
 .w-11\/12 {
@@ -667,52 +662,16 @@ video {
   width: max-content;
 }
 
-.w-1\/2 {
-  width: 50%;
-}
-
-.w-1\/3 {
-  width: 33.333333%;
-}
-
-.w-2\/3 {
-  width: 66.666667%;
-}
-
-.w-1\/4 {
-  width: 25%;
-}
-
-.w-2\/4 {
-  width: 50%;
-}
-
-.flex-grow {
-  flex-grow: 1;
-}
-
 .cursor-pointer {
   cursor: pointer;
 }
 
-.grid-flow-row-dense {
-  grid-auto-flow: row dense;
-}
-
-.grid-cols-3 {
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
-.grid-rows-3 {
-  grid-template-rows: repeat(3, minmax(0, 1fr));
+.grid-cols-5 {
+  grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 
 .flex-col {
   flex-direction: column;
-}
-
-.flex-wrap {
-  flex-wrap: wrap;
 }
 
 .items-start {
@@ -743,6 +702,10 @@ video {
   gap: 2.5rem;
 }
 
+.gap-2 {
+  gap: 0.5rem;
+}
+
 .gap-24 {
   gap: 6rem;
 }
@@ -763,29 +726,9 @@ video {
   gap: 2rem;
 }
 
-.gap-2 {
-  gap: 0.5rem;
-}
-
-.gap-12 {
-  gap: 3rem;
-}
-
-.gap-16 {
-  gap: 4rem;
-}
-
 .gap-x-10 {
   -moz-column-gap: 2.5rem;
        column-gap: 2.5rem;
-}
-
-.gap-y-1 {
-  row-gap: 0.25rem;
-}
-
-.gap-y-16 {
-  row-gap: 4rem;
 }
 
 .gap-y-12 {
@@ -800,38 +743,12 @@ video {
   border-radius: 9999px;
 }
 
-.rounded-lg {
-  border-radius: 0.5rem;
-}
-
 .rounded-xl {
   border-radius: 0.75rem;
 }
 
-.bg-blue-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(219 234 254 / var(--tw-bg-opacity));
-}
-
-.bg-red-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
-}
-
 .bg-\[url\(\'\/public\/features-bg\.png\'\)\] {
   background-image: url('/public/features-bg.png');
-}
-
-.bg-\[url\(\'\/public\/hero-bg\.png\'\)\] {
-  background-image: url('/public/hero-bg.png');
-}
-
-.bg-\[url\(\'\/public\/star\.png\'\)\] {
-  background-image: url('/public/star.png');
-}
-
-.bg-\[url\(\'\/public\/\.png\'\)\] {
-  background-image: url('/public/.png');
 }
 
 .bg-\[url\(\'\/public\/features-card1\.png\'\)\] {
@@ -848,6 +765,14 @@ video {
 
 .bg-\[url\(\'\/public\/features-card4\.png\'\)\] {
   background-image: url('/public/features-card4.png');
+}
+
+.bg-\[url\(\'\/public\/hero-bg\.png\'\)\] {
+  background-image: url('/public/hero-bg.png');
+}
+
+.bg-\[url\(\'\/public\/star\.png\'\)\] {
+  background-image: url('/public/star.png');
 }
 
 .bg-cover {
@@ -867,6 +792,18 @@ video {
      object-fit: contain;
 }
 
+.p-7 {
+  padding: 1.75rem;
+}
+
+.p-9 {
+  padding: 2.25rem;
+}
+
+.p-8 {
+  padding: 2rem;
+}
+
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
@@ -875,6 +812,11 @@ video {
 .px-20 {
   padding-left: 5rem;
   padding-right: 5rem;
+}
+
+.px-28 {
+  padding-left: 7rem;
+  padding-right: 7rem;
 }
 
 .px-4 {
@@ -907,22 +849,17 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
-.px-28 {
-  padding-left: 7rem;
-  padding-right: 7rem;
-}
-
 .pt-24 {
   padding-top: 6rem;
 }
 
 .text-center {
   text-align: center;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-5xl {
@@ -933,6 +870,10 @@ video {
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
+}
+
+.font-bold {
+  font-weight: 700;
 }
 
 .leading-tight {
@@ -1094,18 +1035,12 @@ body {
   background-color: var(--blue01);
 }
 
-@media (min-width: 640px) {
-  .sm\:w-1\/3 {
-    width: 33.333333%;
-  }
+.features .content p{
+  color: var(--gray02);
+}
 
-  .sm\:w-2\/3 {
-    width: 66.666667%;
-  }
-
-  .sm\:flex-grow-0 {
-    flex-grow: 0;
-  }
+.features .content .container .card:nth-child(1){
+  height: 380px;
 }
 
 @media (min-width: 768px) {
