--- a/src/styles.css
+++ b/src/styles.css
@@ -93,7 +93,7 @@ body {
 }
 
 .hero .footer-buttons :last-child {
-    border: 1px solid var(--gray02);
+    border: 1px solid var(--gray01);
     background: linear-gradient(92deg, #131212 1.08%, rgba(22, 22, 22, 0.88) 46.58%, rgba(29, 28, 28, 0.78) 67.12%, rgba(25, 25, 25, 0.90) 98.92%);
 }
 
@@ -142,18 +142,23 @@ body {
 }
 
 
-.features .content p{
+.features .content p {
     color: var(--gray02);
 }
 
-.features .content .container .card{
+.features .content .container .card {
     height: 380px;
+    border: 1px solid var(--gray01);
 }
 
-.features .content .container .card:nth-child(2) .card__content{
+.features .content .container .card:nth-child(2) .card__content {
     width: 350px;
 }
 
-.features .content .container .card:nth-child(3) .card__content{
+.features .content .container .card:nth-child(3) .card__content {
     width: 350px;
+}
+
+footer p {
+    color: var(--gray02);
 }
