--- a/src/styles.css
+++ b/src/styles.css
@@ -76,7 +76,7 @@ body {
     width: 880px;
 
     @media screen and (max-width : 767px) {
-        font-size: 2rem;
+        font-size: 2.2rem;
         width: 100%;
     }
 
@@ -129,12 +129,12 @@ body {
         text-align: center;
     }
 
-    @media screen and (max-width : 367px) {
+    /* @media screen and (max-width : 367px) {
         width: 100% !important;
         display: flex;
         justify-content: center;
         text-align: center;
-    }
+    } */
 }
 
 .tag p {
