--- a/src/styles.css
+++ b/src/styles.css
@@ -101,7 +101,7 @@ body {
     color: var(--gray02);
     width: 510px;
 
-    @media screen and (max-width : 768px) {
+    @media screen and (max-width : 767px) {
         width: 100%;
     }
 
@@ -127,7 +127,7 @@ body {
     padding: 0.5rem 1rem;
     width: max-content;
 
-    @media screen and (max-width : 768px) {
+    @media screen and (max-width : 767px) {
         display: flex;
         justify-content: center;
         text-align: center;
@@ -186,14 +186,36 @@ body {
 .features .content .container .card {
     height: 380px;
     border: 1px solid var(--gray01);
+
+    @media screen and (max-width : 767px) {
+        height: 400px;
+    }
+
+    @media screen and (max-width : 340px) {
+        height: 450px;
+    }
+
+    @media screen and (min-width : 768px) and (max-width: 1023px) {
+        height: 395px;
+    }
 }
 
 .features .content .container .card:nth-child(2) .card__content {
     width: 350px;
+
+    @media screen and (min-width : 768px) and (max-width: 1023px) {
+        flex-grow: 1;
+        width: 100%;
+    }
 }
 
 .features .content .container .card:nth-child(3) .card__content {
     width: 350px;
+
+    @media screen and (min-width : 768px) and (max-width: 1023px) {
+        flex-grow: 1;
+        width: 100%;
+    }
 }
 
 footer p {
