--- a/src/styles.css
+++ b/src/styles.css
@@ -135,7 +135,7 @@ body {
 }
 
 .tag-hero {
-    @media screen and (max-width : 340px) {
+    @media screen and (max-width : 361px) {
         width: 100% !important;
         display: flex;
         justify-content: center;
@@ -165,6 +165,10 @@ body {
 
 .features .title h2 {
     width: 420px;
+
+    @media screen and (max-width : 767px) {
+        width: 100%;
+    }
 }
 
 .features .title h2 span {
