--- a/src/output.css
+++ b/src/output.css
@@ -596,14 +596,6 @@ video {
   z-index: 50;
 }
 
-.z-40 {
-  z-index: 40;
-}
-
-.z-30 {
-  z-index: 30;
-}
-
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -636,6 +628,10 @@ video {
 .h-max {
   height: -moz-max-content;
   height: max-content;
+}
+
+.w-12 {
+  width: 3rem;
 }
 
 .w-full {
@@ -702,18 +698,6 @@ video {
   gap: 2rem;
 }
 
-.gap-11 {
-  gap: 2.75rem;
-}
-
-.gap-12 {
-  gap: 3rem;
-}
-
-.gap-14 {
-  gap: 3.5rem;
-}
-
 .gap-x-10 {
   -moz-column-gap: 2.5rem;
        column-gap: 2.5rem;
@@ -733,10 +717,6 @@ video {
 
 .rounded-xl {
   border-radius: 0.75rem;
-}
-
-.bg-transparent {
-  background-color: transparent;
 }
 
 .bg-\[url\(\'\/public\/features-bg\.png\'\)\] {
@@ -769,10 +749,6 @@ video {
 
 .bg-cover {
   background-size: cover;
-}
-
-.bg-contain {
-  background-size: contain;
 }
 
 .bg-center {
@@ -824,10 +800,6 @@ video {
 
 .py-7 {
   padding-top: 1.75rem;
-  padding-bottom: 1.75rem;
-}
-
-.pb-7 {
   padding-bottom: 1.75rem;
 }
 
@@ -1042,7 +1014,21 @@ body {
   }
 }
 
+.destinations-list .title h2 {
+  width: 420px;
+  @media screen and (max-width : 767px) {
+    width: 100%;
+  }
+}
+
 .features .title h2 span {
+  background: linear-gradient(92deg, #1770F6 68.89%, #9243FA 94.31%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.destinations-list .title h2 span {
   background: linear-gradient(92deg, #1770F6 68.89%, #9243FA 94.31%);
   background-clip: text;
   -webkit-background-clip: text;
@@ -1087,6 +1073,24 @@ body {
 
     width: 100%;
   }
+}
+
+.destinations-list .destination-card {
+  width: 666px!important;
+  padding: 25px;
+  border: 1px solid rgba(128, 128, 128, 0.40);
+  background: linear-gradient(133deg, #131212 -12.99%, rgba(21, 20, 20, 0.94) 23.89%, rgba(22, 22, 22, 0.69) 56.42%, rgba(25, 25, 25, 0.77) 93.29%);
+}
+
+.destinations-list .destination-card img {
+  height: 354px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.destinations-list .destination-card .destination-card__content p {
+  color: var(--gray02);
+  flex-grow: 1;
 }
 
 footer p {
