add  destinations-card

--- a/src/output.css
+++ b/src/output.css
@@ -605,6 +605,10 @@ video {
   margin-right: 0.5rem;
 }
 
+.mr-0 {
+  margin-right: 0px;
+}
+
 .flex {
   display: flex;
 }
@@ -636,6 +640,11 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-max {
+  width: -moz-max-content;
+  width: max-content;
 }
 
 .cursor-pointer {
@@ -1076,7 +1085,7 @@ body {
 }
 
 .destinations-list .destination-card {
-  width: 666px!important;
+  width: 380px;
   padding: 25px;
   border: 1px solid rgba(128, 128, 128, 0.40);
   background: linear-gradient(133deg, #131212 -12.99%, rgba(21, 20, 20, 0.94) 23.89%, rgba(22, 22, 22, 0.69) 56.42%, rgba(25, 25, 25, 0.77) 93.29%);
@@ -1206,6 +1215,10 @@ footer p {
   .lg\:px-20 {
     padding-left: 5rem;
     padding-right: 5rem;
+  }
+
+  .lg\:pl-20 {
+    padding-left: 5rem;
   }
 
   .lg\:text-2xl {
