--- a/src/styles.css
+++ b/src/styles.css
@@ -245,6 +245,15 @@ body {
     background: linear-gradient(133deg, #131212 -12.99%, rgba(21, 20, 20, 0.94) 23.89%, rgba(22, 22, 22, 0.69) 56.42%, rgba(25, 25, 25, 0.77) 93.29%);
 }
 
+.swiper-container{
+    scroll-behavior: smooth;
+}
+
+.swiper-container.dragging .destination-card {
+    cursor: grab;
+    user-select: none;
+}
+
 .destinations-list .destination-card img {
     height: 354px;
     object-fit: contain;
